SVN Update# 3859 by birchie: SafeLinking - Upgraded to support a list of links